@@ -1,9 +1,10 @@
-36187 8 ./Makefile
+44339 8 ./Makefile
 21970 13 ./s9core.h
-14627 93 ./s9.c
+40180 93 ./s9.c
+23969 9 ./MASCOT.png
 18307 77 ./s9core.tr
 160 35 ./s9.scm
-24914 58 ./s9core.c
+45789 58 ./s9core.c
 18002 19 ./s9.1.txt
 20304 1 ./ABOUT
 41089 38 ./contrib/format.scm
@@ -178,6 +179,28 @@
 32542 13 ./ext/curses/curses.c
 53280 3 ./ext/curses/curses.scm
 21303 6 ./ext/curses/get-line.scm
+17660 30 ./ext/sys-unix/unix.c
+1795 14 ./ext/sys-unix/unix.scm
+35123 1 ./ext/sys-unix/append-to-output-file.scm
+45261 1 ./ext/sys-unix/find-help-path.scm
+48949 5 ./ext/sys-unix/find-help.scm
+56586 1 ./ext/sys-unix/flush-output-port.scm
+15799 4 ./ext/sys-unix/inet-server.scm
+55294 2 ./ext/sys-unix/mode-to-string.scm
+23329 10 ./ext/sys-unix/parse-optionsb.scm
+3324 8 ./ext/sys-unix/runtime-stats.scm
+42738 1 ./ext/sys-unix/search-path.scm
+18081 2 ./ext/sys-unix/spawn-command.scm
+47064 2 ./ext/sys-unix/spawn-shell-command.scm
+53655 2 ./ext/sys-unix/standard-error.scm
+3806 3 ./ext/sys-unix/time.scm
+60470 1 ./ext/sys-unix/unix-tools.scm
+44855 28 ./ext/sys-plan9/plan9.c
+39461 1 ./ext/sys-plan9/s9-ffi.h
+25212 1 ./ext/sys-plan9/plan9-tools.scm
+11323 2 ./ext/sys-plan9/s9-ffi.c
+11257 4 ./ext/sys-plan9/plan9.scm
+1815 1 ./ext/sys-plan9/util.scm
 64266 2 ./help/help
 1087 1 ./help/not
 49789 5 ./help/eqvp
@@ -417,6 +440,7 @@
 57151 1 ./help/tree-map
 21316 2 ./help/pushb
 6741 2 ./help/package
+40581 1 ./help/system
 37827 3 ./help/make-canvas
 25068 1 ./help/listq
 57005 1 ./help/appendb
@@ -449,7 +473,16 @@
 48272 1 ./help/vector-append
 14589 1 ./help/nase
 64685 1 ./help/vector-copy
-40581 1 ./help/system
+26233 2 ./help/curses/curs_addch
+58199 2 ./help/curses/curs_attroff
+14692 4 ./help/curses/curs_cbreak
+7059 1 ./help/curses/curs_clear
+18676 1 ./help/curses/curs_color-set
+568 1 ./help/curses/curs_cursoff
+61683 2 ./help/curses/curs_delch
+12648 1 ./help/curses/curs_endwin
+45545 3 ./help/curses/curs_flushinp
+59170 2 ./help/curses/get-line
 20207 1 ./help/environ
 48804 1 ./help/queens
 24435 1 ./help/collect
@@ -467,6 +500,76 @@
 46554 1 ./help/stddev
 48285 1 ./help/variance
 52402 1 ./help/stat-tools
+64211 1 ./help/sys-unix/sys_access
+57080 1 ./help/sys-unix/sys_catch-errors
+40672 1 ./help/sys-unix/sys_chdir
+51898 2 ./help/sys-unix/sys_chmod
+8 1 ./help/sys-unix/sys_chown
+37925 1 ./help/sys-unix/sys_command-line
+42214 1 ./help/sys-unix/sys_dup
+45656 1 ./help/sys-unix/sys_errno
+44639 1 ./help/sys-unix/sys_execv
+40127 1 ./help/sys-unix/sys_exit
+39622 1 ./help/sys-unix/sys_fileno
+23257 1 ./help/sys-unix/sys_flush
+39525 1 ./help/sys-unix/sys_fork
+34058 1 ./help/sys-unix/sys_get-magic-value
+40362 1 ./help/sys-unix/sys_getcwd
+33322 1 ./help/sys-unix/sys_getenv
+17943 1 ./help/sys-unix/sys_getpgid
+62953 1 ./help/sys-unix/sys_getgrnam
+3413 1 ./help/sys-unix/sys_getpid
+2018 1 ./help/sys-unix/sys_getpwent
+34379 1 ./help/sys-unix/sys_getpwnam
+27041 1 ./help/sys-unix/sys_gettimeofday
+18147 1 ./help/sys-unix/sys_getuid
+34912 1 ./help/sys-unix/sys_group-name
+36642 1 ./help/sys-unix/append-to-output-file
+52911 1 ./help/sys-unix/find-help-path
+64593 1 ./help/sys-unix/find-help
+30107 1 ./help/sys-unix/flush-output-port
+12997 1 ./help/sys-unix/sys_kill
+28002 1 ./help/sys-unix/sys_link
+35577 1 ./help/sys-unix/sys_lock
+14750 1 ./help/sys-unix/sys_lseek
+63956 1 ./help/sys-unix/sys_make-input-port
+11282 1 ./help/sys-unix/sys_mkdir
+41623 2 ./help/sys-unix/sys_open
+23740 1 ./help/sys-unix/sys_pipe
+24689 1 ./help/sys-unix/sys_read
+64366 1 ./help/sys-unix/sys_readdir
+6790 1 ./help/sys-unix/sys_readlink
+46446 1 ./help/sys-unix/sys_rename
+18025 1 ./help/sys-unix/sys_rmdir
+25380 1 ./help/sys-unix/sys_select
+40128 1 ./help/sys-unix/sys_setuid
+12810 2 ./help/sys-unix/sys_stat
+16454 1 ./help/sys-unix/time
+50854 2 ./help/sys-unix/sys_stat-name
+15841 2 ./help/sys-unix/sys_stat-regularp
+36402 1 ./help/sys-unix/sys_strerror
+23802 1 ./help/sys-unix/sys_symlink
+17646 1 ./help/sys-unix/sys_system
+50004 1 ./help/sys-unix/sys_umask
+57019 1 ./help/sys-unix/sys_unlink
+1107 1 ./help/sys-unix/sys_unlock
+52659 1 ./help/sys-unix/sys_user-name
+57349 1 ./help/sys-unix/sys_usleep
+9510 1 ./help/sys-unix/sys_utimes
+21996 1 ./help/sys-unix/sys_wait
+24203 2 ./help/sys-unix/inet-server
+11770 1 ./help/sys-unix/mode-to-string
+46621 4 ./help/sys-unix/parse-optionsb
+12440 3 ./help/sys-unix/runtime-stats
+30565 1 ./help/sys-unix/search-path
+42119 1 ./help/sys-unix/spawn-command
+32572 1 ./help/sys-unix/spawn-shell-command
+15102 1 ./help/sys-unix/standard-error-port
+297 1 ./help/sys-unix/char-readyp
+9601 1 ./help/sys-unix/sys_inet-connect
+1686 1 ./help/sys-unix/sys_inet-getpeername
+52834 2 ./help/sys-unix/sys_inet-listen
+26606 1 ./help/sys-unix/unix-tools
 37423 2 ./prog/c2html1.scm
 37734 9 ./prog/s9resolve.scm
 39328 3 ./prog/soccat.scm
@@ -489,20 +592,19 @@
 12837 63 ./util/test.scm
 12249 29 ./util/libtest.scm
 17652 2 ./util/libtest.sh
-6554 1 ./util/dirhead
+26839 1 ./util/dirhead
 1076 10 ./util/descriptions
 62845 1 ./util/dirtail
 53266 4 ./util/srtest.scm
-16116 10 ./util/make-html
-57390 3 ./util/s9.css
+37909 10 ./util/make-html
 44691 2 ./util/make-docs
-47332 1 ./util/libhead
+62151 1 ./util/libhead
 62845 1 ./util/libtail
 19739 12 ./util/make-help-links
 37064 4 ./util/stress-tests.tgz
 53946 17 ./util/systest.scm
 31821 2 ./util/check-descr.scm
-31245 8 ./util/categories.html
+55156 8 ./util/categories.html
 7041 3 ./util/make-cats.scm
 34829 45 ./util/realtest.scm
 20795 1 ./util/pagetail
@@ -514,9 +616,8 @@
 48144 1 ./util/s9.rc
 41741 13 ./util/fix-help-files
 14635 2 ./README.s9core
-17803 79 ./CHANGES
+10468 79 ./CHANGES
 32621 2 ./LICENSE
-23969 9 ./MASCOT.png
 47295 8 ./README
 3386 1 ./TODO
 48690 1 ./config.scm
