@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>@DESC@ : S9fES : T3X.ORG</TITLE>
-<LINK rel="stylesheet" type="text/css" href="s9.css" title="s9">
+<LINK rel="stylesheet" type="text/css" href="../t3x.css" title="s9">
 </HEAD>
 <BODY>
 
