@@ -259,7 +259,7 @@ if [ $update_only = no -o $update_only = dir ]; then
 		fi
 	else
 		mkdir $dumpdir
-		cp s9fes-$V.tgz util/s9.css MASCOT.png $dumpdir
+		cp s9fes-$V.tgz MASCOT.png $dumpdir
 		cp prog/edoc.css contrib/scheme.css contrib/ccode.css $dumpdir
 		mv -f /tmp/s9core$$.pdf s9core.pdf
 		mv -f /tmp/s9core$$.tgz s9core-$V.tgz
@@ -294,7 +294,7 @@ if [ $update_only = no -o $update_only = txt ]; then
 	format_txt_files contrib contrib/format.txt contrib/s9sos.txt
 	format_txt_files util util/descriptions util/make-help-links
 	format_txt_files util util/libtest.sh util/make-docs util/make-html
-	format_txt_files util util/fix-help-files util/rp_html util/s9.css	
+	format_txt_files util util/fix-help-files util/rp_html
 	format_txt_files util util/s9.rc
 fi
 
